<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#94c995"
            android:text="시간 값 적용(this.뭐시기 하면 되겠지)"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <VideoView
            android:id="@+id/blackbox"
            android:layout_width="match_parent"
            android:layout_height="200dp">

        </VideoView>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#94c995"
                android:text="@string/btn8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnmain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="#94c995"
                    android:gravity="center"
                    android:text="메인으로 이동" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>